--- a/webapp/index.html
+++ b/webapp/index.html
@@ -1,36 +1,40 @@
 <html>
-
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <!-- Angular -->
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.2/angular.min.js"/></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.2/angular-route.js"/></script>
+  <!-- Bootstrap -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+  <!-- Project -->
   <script src="petuniaClient.js"></script>
+  <script src="app.js"></script>
 </head>
-
-<body>
-  Hello!
-  <div id="isPaid">
-    ...
+<body ng-app="app">
+  <div class="container" ng-controller="PaymentController">
+    <h1>Petunia - pay with Ethereum</h1>
+    <div id="pay" class="card">
+      <div class="card-header">Payment ID: {{paymentId}}</div>
+      <div class="card-body">
+        <dl>
+          <dt>Price</dt>
+          <dd>{{priceInEth}} ETH</dd>
+          <dt>Status</dt>
+          <dd>{{status}}</dd>
+        </dl>
+        <span>{{params}}</span>
+      </div>
+      <div class="card-footer">
+        <button ng-if="status == 'New'" class="btn btn-primary" ng-click="pay()">Pay</button>
+        <button ng-if="status == 'Paid'" class="btn btn-primary" ng-click="goToStore()">Go back to store</button>
+        <div ng-if="status == 'InProgress'" class="progress">
+          <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%"></div>
+        </div>
+      </div>
+    </div>
   </div>
-  <div id="account">
-  </div>
-  <button onclick="petunia.pay()">Pay</button>
-  <button onclick="petunia.isPaid()">isPaid</button>
-  <script>
-    const paymentInfo = () => document.getElementById("isPaid");
-    const account = () => document.getElementById("account");
-    var petunia = {};
-    window.addEventListener('load', function() {
-          if (typeof web3 !== 'undefined' && typeof Web3 !== 'undefined') {
-            web3 = new Web3(web3.currentProvider);
-          } else if (typeof Web3 !== 'undefined') {
-            console.log('No web3? You should consider trying MetaMask!')
-            web3 = new Web3(new Web3.providers.HttpProvider("http://localhost:8545"));
-          }
-
-          web3.eth.getBalance(contractAddress, 'latest', (e,r) => element().innerHTML = "Current balance is: " + web3.fromWei(r, 'ether') + " ETH");
-
-          petunia = loadContract(web3);
-          account().innerHTML = petunia.account;
-        });
-  </script>
 </body>
-
 </html>
